@@ -533,6 +533,14 @@ AVT_API avt_bool_t avt_get_inverse (void);
 AVT_API void avt_normal_text (void);
 
 /*
+ * switch wikisyntax mode on or off
+ *
+ * in wikisyntax mode the character "_" toggles the underlined mode
+ * and the character "*" toggles the bold mode on or off
+ */
+AVT_API void avt_wikisyntax (avt_bool_t onoff);
+
+/*
  * set scroll mode
  * -1 = off, 0 = page-flipping, 1 = normal
  */
